# explore-object-detection-demo

./: .gitignore  README.md  explore_annotations.py  explore_annotations_simple.py  pyproject.toml
data/annotations/: coco_val_2020.parquet.gzip
src/constants/: colors.py
src/utils/: display.py
