[tool.poetry]
name = "explore-object-detection-demo"
version = "0.1.0"
description = "Github repo for \"How to Explore Your Object Detection Dataset With Streamlit\""
readme = "README.md"
authors = [
    "Arnault Chazareix <arnaultc@sicara.com>",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.0"
opencv-python-headless = "^4.5.5"
pandas = "^1.3.5"
streamlit = "^1.3.1"
Pillow = "^9.0.0"
stqdm = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
isort = "^5.9.3"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.pylint.messages_control]
disable = [
    "fixme",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",

    # Already managed by Black
    "line-too-long",
    # Import errors, already dealt with by isort
    "ungrouped-imports",
    "wrong-import-order",
    "wrong-import-position",
]

[tool.pylint.master]
jobs = 2
extension-pkg-whitelist = ["cv2"]

[tool.pylint.typecheck]
ignored-classes = ["TextFileReader"]

[tool.pylint.basic]
good-names = ["x", "y", "x1", "y1", "x2", "y2", "xc", "yc"]


[tool.isort]
profile = "black"
multi_line_output = 3
